[project]
name = "elapi"
version = "2.3.3"
description = "elAPI is a powerful, extensible API client for eLabFTW."
authors = [{ name = "Alexander Haller, Mahadi Xion", email = "elabftw@uni-heidelberg.de" }]
requires-python = ">=3.9.0,<4"
readme = "README.md"
license = "AGPL-3.0-only"
maintainers = [{ name = "Mahadi Xion", email = "mahadi.xion@urz.uni-heidelberg.de" }]
keywords = [
    "elabftw",
    "api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "dynaconf>=3.2.0,<4",
    "httpx>=0.24.1,<0.25",
    "httpx-auth>=0.17.0,<0.18",
    "rich>=13.8.0,<14",
    "typer[all]>=0.9.0,<0.10",
    "pyyaml>=6.0.1,<7",
    "mistune>=3.0.2,<4",
    "h2>=4.1.0,<5",
    "click>=8.1.8,<8.2"
]

[project.optional-dependencies]
uhd-urz = [
    "python-dateutil>=2.9.0.post0,<3",
    "tenacity>=9.0.0,<10",
    "uvloop>=0.20.0,<0.21",
]

[project.urls]
Homepage = "https://www.urz.uni-heidelberg.de/de/service-katalog/software-und-anwendungen/elabftw"
Repository = "https://github.com/uhd-urz/elAPI.git"
Issues = "https://github.com/uhd-urz/elAPI/issues"
Changelog = "https://github.com/uhd-urz/elAPI/blob/main/CHANGELOG.md"

[project.scripts]
elapi = "elapi.cli.elapi:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ptpython>=3.0.23,<4"]
