[project]
name = "elapi"
version = "2.4.4"
description = "elAPI is a powerful, extensible API client for eLabFTW."
authors = [{ name = "Alexander Haller, Mahadi Xion", email = "elabftw@uni-heidelberg.de" }]
requires-python = ">=3.11.0,<4"
readme = "README.md"
license = "AGPL-3.0-only"
maintainers = [{ name = "Mahadi Xion", email = "mahadi.xion@urz.uni-heidelberg.de" }]
keywords = [
    "elabftw",
    "api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "dynaconf>=3.2.0,<4",
    "httpx[http2]>=0.28.1,<0.29",
    "httpx-auth>=0.23.1,<0.24",
    "rich>=13.8.0,<14",
    "typer[all]>=0.9.0,<0.10",
    "pyyaml==6.0.2",
    "mistune==3.1.3",
    "click>=8.1.8,<8.2",
    "httpx-limiter>=0.3.0,<0.4.0",
    "httpx-aiohttp>=0.1.8,<0.2",
]
license-files = [
    "LICENSE",
    "src/elapi/_vendor/*/LICENSE"
]

[project.optional-dependencies]
uhd-urz = [
    "python-dateutil>=2.9.0.post0,<3",
    "tenacity>=9.1.2,<10",
    "uvloop>=0.21.0,<0.22",
]
mail = [
    "jinja2>=3.1.6,<3.2",
    "nameparser>=1.1.3",
    "yagmail>=0.15.293,<0.16",
]

[project.urls]
Homepage = "https://www.urz.uni-heidelberg.de/de/service-katalog/software-und-anwendungen/elabftw"
Repository = "https://github.com/uhd-urz/elAPI.git"
Issues = "https://github.com/uhd-urz/elAPI/issues"
Changelog = "https://github.com/uhd-urz/elAPI/blob/main/CHANGELOG.md"

[project.scripts]
elapi = "elapi.cli.elapi:app"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pip>=25.1.1", # vendy requires pip
    "ptpython>=3.0.23,<4",
    "vendy>=0.0.3",
]

[tool.vendy]
target = 'src/elapi/'
# vendy will auto-crate src/elapi/_vendor
packages = [
    "haggis==0.14.1",
]
